tests/sksl/errors/ArgumentMismatch.glsl
### Compilation failed:

error: 6: expected 'float', but found 'bool'
    float x = foo(true);
                  ^^^^
1 error
